product card and responsive page